@@ -47,6 +47,7 @@
     Multisite:
     * 3959 Two new filters for the comment view: author and comment text field
     * 3970 SEC: Fixed possible URL injection on index page...
+    * 3971 Event Console: Event numbers are now also displayed in tactical overview snapin...
     * 3897 FIX: Fixed possible exception in raw edition when rendering graphs
     * 3898 FIX: Unmonitored services: Fixed possible bug in case discovery service produces unexpected output
     * 3902 FIX: Graph search view: Changing painter options made page empty
